@@ -7,7 +7,7 @@ Author: Dirk Eddelbuettel <edd@debian.org> with contributions
  Matthew de Queljoe, Ion Suruceanu, Bill Denney, Dirk Schumacher,
  Winston Chang, Dean Attali, and Michael Chirico.
 Version: 0.6.35.3
-Date: 2024-06-22
+Date: 2024-06-23
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Title: Create Compact Hash Digests of R Objects
 Description: Implementation of a function 'digest()' for the creation of hash
