@@ -1,6 +1,11 @@
-2024-06-22  Dirk Eddelbuettel  <edd@debian.org>
+2024-06-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
+
+	* src/digest.c (is_little_endian): Define alternate helper tooo
+	* man/digest.Rd: Compare to spookyhash ref only on little endian
+
+2024-06-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/digest.c (is_big_endian): Use endian-ness definition from
 	Rconfig.h and define one-line helper
